Added Section 'AlexNet: A Breakthrough in Deep Learning' & 'Reducing Overfitting: Regularization Techniques in AlexNet'

--- a/Computer-Vision/01_AlexNet.ipynb
+++ b/Computer-Vision/01_AlexNet.ipynb
@@ -95,7 +95,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Intro to AlexNet"
+        "# 2. AlexNet: A Breakthrough in Deep Learning"
       ],
       "metadata": {
         "id": "zYAyTOJRLPo3"
@@ -104,12 +104,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[AlexNet](https://proceedings.neurips.cc/paper_files/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf) is a Convolutional Neural Network architecture that won the ImageNet Challenge of 2012 with a top-5 error rate of 16.4%. This was a significant improvement over the previous top-5 error rate on ImageNet, which was 25.8%, making AlexNet a remarkable achievement.\n",
+        "[AlexNet](https://proceedings.neurips.cc/paper_files/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf), a Convolutional Neural Network architecture, made history by winning the ImageNet Challenge of 2012 with a top-5 error rate of 16.4%. This was a substantial improvement over the previous best of 25.8%, marking a significant milestone in the field of deep learning.\n",
         "\n",
-        "AlexNet is one of the most influential papers in the field of deep learning and computer vision. As of 2024, according to Google Scholar, AlexNet has been cited over 164,083 times."
+        "The mastermind behind AlexNet was **Alex Krizhevsky**, a computer scientist and researcher. Working with Ilya Sutskever and Geoffrey Hinton at the University of Toronto, Krizhevsky developed AlexNet, which introduced several key innovations in deep learning, including:\n",
+        "\n",
+        "- **Deep Convolutional Networks:** AlexNet employed a deeper architecture than previous models, demonstrating the effectiveness of stacking multiple layers.\n",
+        "\n",
+        "- **ReLU Activation Functions:** The use of ReLU activation functions helped to address the vanishing gradient problem, enabling faster training.\n",
+        "\n",
+        "- **Dropout Regularization:** Dropout was introduced to prevent overfitting by randomly dropping neurons during training.\n",
+        "\n",
+        "AlexNet's success had a profound impact on the field of deep learning, inspiring further research and development in computer vision and other domains. As of 2024, AlexNet has been cited over 164,083 times, solidifying its position as one of the most influential papers in the history of deep learning."
       ],
       "metadata": {
-        "id": "nHgI2aQgLXkz"
+        "id": "2FYPEGLqYkVW"
       }
     },
     {
@@ -234,6 +242,54 @@
       ],
       "metadata": {
         "id": "Tybc-DeDUG8g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![rainbow](https://github.com/ancilcleetus/My-Learning-Journey/assets/25684256/839c3524-2a1d-4779-85a0-83c562e1e5e5)"
+      ],
+      "metadata": {
+        "id": "SoOJNF0aWpeJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4. Reducing Overfitting: Regularization Techniques in AlexNet"
+      ],
+      "metadata": {
+        "id": "HkhbJ4wIWpeT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To mitigate overfitting, AlexNet employed two key regularization techniques: data augmentation and dropout.\n",
+        "\n",
+        "**Data Augmentation**\n",
+        "\n",
+        "- **Purpose:** To expand the training dataset by creating artificial variations of existing images.\n",
+        "\n",
+        "- **Methods:**\n",
+        "    - Horizontal flipping: Randomly mirroring images horizontally.\n",
+        "    - Color intensity changes: Adjusting the brightness, contrast, or saturation.\n",
+        "\n",
+        "**Dropout**\n",
+        "\n",
+        "- **Purpose:** To make the network more robust by randomly dropping neurons during training.\n",
+        "\n",
+        "- **Mechanism:**\n",
+        "    - Neurons are randomly dropped with a probability of 0.5 in AlexNet's first two fully connected layers.\n",
+        "    - Dropped neurons are not considered during forward and backward propagation.\n",
+        "    - This forces the network to learn without relying on specific neurons, improving its generalization ability.\n",
+        "- **Benefits:**\n",
+        "    - Can be seen as a computationally efficient form of ensemble learning, as it creates multiple networks with shared weights.\n",
+        "\n",
+        "By using these regularization techniques, AlexNet was able to achieve better performance and generalization on the ImageNet dataset."
+      ],
+      "metadata": {
+        "id": "8_OzuStsXU2r"
       }
     },
     {
